# minimally-disruptive-curves

./: License.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  workflows.yml
src/minimally_disruptive_curves/: __init__.py  plotting.py  problem.py  solver.py  transforms.py  utilities.py
tests/: test_events.py  test_jit_and_cost.py  test_lotka_volterra_hessian_init.py  test_mass_spring.py  test_mass_spring_transformchain.py  test_plotting.py  test_quadratic.py  test_sparse_init.py  test_transformed_cost.py  test_transforms.py
