[project]
name = "minimally-disruptive-curves"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dhruva2", email = "dhruvaraman@hotmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "diffrax>=0.7.2",
    "equinox>=0.13.8",
    "jax>=0.10.2",
    "jaxlib>=0.10.2",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "optimistix>=0.1.0",
]

[project.optional-dependencies]
plots = ["matplotlib"]

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "matplotlib",
    "marimo>=0.23.10",
]
